# c-http-requests

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.c
examples/: CMakeLists.txt  get_external_ip_address.c  post_to_api_rest.c  print_response.c
src/: requester.h
src/client/: client.h  config.h  http_client.c  http_client.h  http_client_abstractions.c  http_client_abstractions.h
src/core/: config.h  core.h  http_default.h
src/core/network/: certs_location.h  client_socket.c  client_socket.h  client_socket_unix.c  client_socket_windows.c  network.h  secure_client_layer.c  secure_client_layer.h
src/core/structs/: http_content.c  http_content.h  http_headers.c  http_headers.h  http_message.h  http_method.c  http_method.h  http_method_text.h  http_request.c  http_request.h  http_response.c  http_response.h  http_status.c  http_status.h  http_status_text.h  http_version.c  http_version.h  http_version_text.h  mime_type.c  mime_type.h  mime_type_text.h  query_params.c  query_params.h  string_map.c  string_map.h  structs.h  url.c  url.h  url_protocol.c  url_protocol.h  url_protocol_text.h
src/core/utils/: arrays.h  data_types_aliases.h  float_string.c  float_string.h  int_string.c  int_string.h  logs.c  logs.h  math.h  pointers.h  print_log.c  print_log.h  strings.c  strings.h  utils.h
src/helpers/: helpers.h  user_agents.h
